objects/EUS_EndUserSupport__c.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Under Investigation</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Under Correction</fullName>
                </value>
                <value>
                    <fullName>Under Champion&apos;s Validation</fullName>
                </value>
                <value>
                    <fullName>Suspended - Long Term Resolution</fullName>
                </value>
                <value>
                    <fullName>Waiting for 3rd party correction</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Postponed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suspended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Suspended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_EmailAddressPremierSupport__c</fullName>
        <defaultValue>&quot;premiersupport@salesforce.com&quot;</defaultValue>
        <description>This fields is field automatically with the email address of SFDC Premier Support. It will be used if the request is sent to Premier Support to generate a case.</description>
        <label>TECH_EmailAddressPremierSupport</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_ListViewMyCreatedSupportRequest__c</fullName>
        <formula>IF($User.Id == CreatedBy.Id, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TECH_ListViewMyCreatedSupportRequest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnderChampionValidationDate__c</fullName>
        <label>Under Champion&apos;s Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <label>Workaround</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>End User Support</label>
    <listViews>
        <fullName>AUT_EUS_requests_2014</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 6) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>EscalationLevel__c</columns>
        <columns>CloseDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>ExpectedClosedDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>vdruge,estrepre,juhesse,cavasque,thschuck,anbrodzi,pehämälä,ellwang,prvakil</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>nabayat,japassos,ricovale,annegi,sagangad,Inma,ancuadra,juazwar</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>domanzi,frglapa,frmarbat,jecamugl,mibonnef,ouparkat,damougin,stlavign</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>jédi sot,élcrespe,krskarbe,thschuck,miheffer,ozann,luvolpat,pavishwa,masantos</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2015 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>equals</operation>
            <value>adazhu</value>
        </filters>
        <label>A_AUT EUS requests 2015</label>
        <language>en_US</language>
        <sharedTo>
            <group>ENE_AUT_Views</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_End_user_support_prod</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>RequestType__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Capacity__c</columns>
        <columns>Environment__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>1/7/2012 12:00 AM</value>
        </filters>
        <filters>
            <field>Environment__c</field>
            <operation>equals</operation>
            <value>Production</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <filters>
            <field>Created_By_User_s_Country__c</field>
            <operation>equals</operation>
            <value>Indonesia</value>
        </filters>
        <label>ID End user support Prod open</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Apr14_REL</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Capacity__c</columns>
        <columns>RequestType__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>EscalationLevel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Criticality__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/26/2014 12:00 AM</value>
        </filters>
        <label>Apr 2014 Major Release EUS - All</label>
        <language>en_US</language>
        <sharedTo>
            <group>bFOGDGroup</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Apr14_REL_Incidents</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Capacity__c</columns>
        <columns>RequestType__c</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>EscalationLevel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Criticality__c</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>4/26/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>RequestType__c</field>
            <operation>equals</operation>
            <value>Incident,Question</value>
        </filters>
        <filters>
            <field>EscalationLevel__c</field>
            <operation>equals</operation>
            <value>Level 3 - Solution Team</value>
        </filters>
        <label>Apr 2014 Major Release - Incidents (L3)</label>
        <language>en_US</language>
        <sharedTo>
            <group>bFOGDGroup</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Apr15_REL</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Capacity__c</columns>
        <columns>RequestType__c</columns>
        <columns>Category__c</columns>
        <columns>Criticality__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>EscalationLevel__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>4/25/2015 12:00 AM</value>
        </filters>
        <label>Apr 2015 Major Release EUS - All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BE_ALL_EUS_CBO</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Criticality__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>Borcy</value>
        </filters>
        <label>BE_ALL EUS CBO</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_All_End_User_Support</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Criticality__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_By_User_s_Country__c</field>
            <operation>startsWith</operation>
            <value>BE</value>
        </filters>
        <filters>
            <field>Title__c</field>
            <operation>contains</operation>
            <value>dashboard</value>
        </filters>
        <label>BE_All End User Support</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_All_End_User_Support_filter</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Criticality__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Title__c</field>
            <operation>contains</operation>
            <value>discussion topic</value>
        </filters>
        <label>BE_All End User Support filter</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BE_Open_EUS_CBO</fullName>
        <booleanFilter>1 AND (2 or 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Criticality__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Created_By_User_s_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - Duplicate,Postponed,Cancelled</value>
        </filters>
        <filters>
            <field>Created_By_User_s_Country__c</field>
            <operation>contains</operation>
            <value>BE</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>contains</operation>
            <value>Belgium</value>
        </filters>
        <label>BE_Open EUS</label>
        <language>en_US</language>
        <sharedTo>
            <group>BE_ALL_USERS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brazil_EUS1</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>BRUNA DE MOURA RODNIK,Marcelo Oliveira,Joao Armando Jerez Soler</value>
        </filters>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>CTI</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - Duplicate,Postponed,Cancelled</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>alexandre naffati,carlos barrozo,Alexis pissinier</value>
        </filters>
        <label>CC Brazil EUS</label>
        <language>en_US</language>
        <sharedTo>
            <group>BR_CCC_GROUP</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Bruce_Kappel_s_Tickets</fullName>
        <booleanFilter>(1 and 2 and 3) or (1 and 2 and 4) or (1 and 2 and 5)</booleanFilter>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>DaysSinceCreation__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CloseDate__c</columns>
        <columns>DetectedBy__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>bruce</value>
        </filters>
        <filters>
            <field>OWNER.LAST_NAME</field>
            <operation>equals</operation>
            <value>kappel</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Approved,Under Investigation,Under Correction,To be tested</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To port in Production,Under Champion&apos;s Validation</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Suspended - Long Term Resolution,Postponed</value>
        </filters>
        <label>Bruce Kappel&apos;s Tickets</label>
        <language>en_US</language>
        <sharedTo>
            <group>NAMProjectTeam</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CIS</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>RequestType__c</columns>
        <columns>Title__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>DetectedBy__c</columns>
        <columns>Priority__c</columns>
        <columns>Criticality__c</columns>
        <columns>ExpectedClosedDate__c</columns>
        <columns>CloseDate__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capacity__c</field>
            <operation>equals</operation>
            <value>CIS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - Duplicate,Suspended - Long Term Resolution</value>
        </filters>
        <label>CIS - Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>CIS_GLobal</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CIS3</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>RequestType__c</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>DetectedBy__c</columns>
        <columns>Priority__c</columns>
        <columns>Criticality__c</columns>
        <columns>ExpectedClosedDate__c</columns>
        <columns>CloseDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Capacity__c</field>
            <operation>equals</operation>
            <value>CIS</value>
        </filters>
        <label>CIS</label>
        <language>en_US</language>
        <sharedTo>
            <group>CIS_GLobal</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CIS_CC_Closed</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>DetectedBy__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EscalationLevel__c</field>
            <operation>equals</operation>
            <value>Level 2 - Delegated Admin,Level 2 - Data Steward</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Martin Ouwehand</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Closed - Duplicate,Cancelled</value>
        </filters>
        <label>My team open EUS</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CIS_CC_Open</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Title__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>DetectedBy__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Created_By_User_s_Country__c</field>
            <operation>contains</operation>
            <value>Ru,BY,Bela,UA,Ukraine,Kaz,KZ</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed,Cancelled</value>
        </filters>
        <filters>
            <field>Capacity__c</field>
            <operation>equals</operation>
            <value>Customer Care</value>
        </filters>
        <label>!CIS- CC - Open</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEO</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>End User Support ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>End User Support</pluralLabel>
    <recordTypes>
        <fullName>EUSRecordType</fullName>
        <active>true</active>
        <description>Standard End-User Support Request</description>
        <label>EUS Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>ExpertiseEUSRecordType</fullName>
        <active>true</active>
        <description>Use to store salesforce,com expertise request</description>
        <label>Expertise - EUS Record Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>PrivilegeEUSRecordType</fullName>
        <active>true</active>
        <description>Use to request temporary extract rights (bypass or admin profile)</description>
        <label>Privilege - EUS Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EUS_VR01_AcceptedSolutionDetail</fullName>
        <active>true</active>
        <description>When the proposed solution is not accepted by the Champion or End User a reason must be given using the field named If No, why?.</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
ISPICKVAL(SolutionAccepted__c, &quot;No&quot;) 
&amp;&amp; 
ISBLANK(IfNoWhy__c )</errorConditionFormula>
        <errorDisplayField>IfNoWhy__c</errorDisplayField>
        <errorMessage>Please explain why the solution not answered your request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUS_VR02_StartingTimeUpdateControl</fullName>
        <active>true</active>
        <description>The starting time cannot be modified after the request has been acknowledged.</description>
        <errorConditionFormula>NOT ( $User.BypassVR__c )
&amp;&amp;
ISCHANGED ( StartingTime__c )
&amp;&amp;
NOT ( ISBLANK ( Acknowledgement_Time__c ) )</errorConditionFormula>
        <errorDisplayField>StartingTime__c</errorDisplayField>
        <errorMessage>You cannot update the Starting Time if the EUS request has already been acknowledged.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUS_VR03_MandatorySolutionWhenClosing</fullName>
        <active>true</active>
        <description>Before saving an EUS ticket with a status equal to &quot;Under champion&apos;s validation&quot; or &quot;Close&quot; the solution should be mandatory.</description>
        <errorConditionFormula>NOT ( $User.BypassVR__c ) 
&amp;&amp; 
$RecordType.DeveloperName != &quot;PrivilegeEUSRecordType&quot; 
&amp;&amp; 
LEN ( Solution__c ) = 0 
&amp;&amp; 
( ISPICKVAL ( Status__c , &quot;Under Champion&apos;s Validation&quot; ) 
|| 
ISPICKVAL ( Status__c, &quot;Closed&quot; ) )</errorConditionFormula>
        <errorDisplayField>Solution__c</errorDisplayField>
        <errorMessage>Please fill in the solution to submit it for champion&apos;s validation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUS_VR04_MandatoryRelatedEUS</fullName>
        <active>true</active>
        <description>201207 - When the status is equal to ʺDuplicateʺ, the ʺRelated End User Supportʺ field becomes mandatory</description>
        <errorConditionFormula>AND( NOT($User.BypassVR__c), ISPICKVAL(Status__c, &quot;Duplicate&quot;) , ISBLANK(RelatedEndUserSupport__c))</errorConditionFormula>
        <errorMessage>Related End User Support” field is mandatory when the status is “Duplicate”</errorMessage>
    </validationRules>
</CustomObject>